@@ -38,6 +38,9 @@
 <p>2018-06-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/constitute.c (ReadImage): Assure that an error exception
+is thrown if coder returns null without properly reporting an
+exception.</li>
 <li>magick/blob.c (BlobToImage): Assure that an error exception is
 thrown if coder returns null without properly reporting an
 exception.</li>
